syntax = "proto3";

package toggle;

option go_package = "./proto/toggle";

message FindAllReq {}

message Toggle {
  string id = 1;
  string name = 2;
  string key = 3;
  string description = 4;
  string status = 5;
  int64 create_at = 6;
  int64 update_at = 7;
  repeated Audience audiences = 8;
}

message Audience {
  string id = 1;
  string name = 2;
  repeated Rule rules = 3;
}

message Rule {
  string id = 1;
  string attribute = 2;
  string operator = 3;
  string value = 4;
}

message FindAllResp {
  repeated Toggle toggles = 1;
}

service RPCToggleService {
  rpc FindAll(FindAllReq) returns (FindAllResp);
}